--- a/test/integration/baselines/parent-selector.html
+++ b/test/integration/baselines/parent-selector.html
@@ -1,4 +1,4 @@
-<pre class="grvsc-container default-light grvsc-ps-tYvMB2" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-t7UkM5-9 grvsc-tYvMB2-10">console</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">.</span><span class="grvsc-t7UkM5-10 grvsc-tYvMB2-11">log</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">(</span><span class="grvsc-t7UkM5-17 grvsc-tYvMB2-8">"Hello, world!"</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">);</span></span></code></pre>
+<pre class="grvsc-container default-light grvsc-ps-tYvMB2" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-source"><span class="grvsc-t7UkM5-9 grvsc-tYvMB2-10">console</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">.</span><span class="grvsc-t7UkM5-10 grvsc-tYvMB2-11">log</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">(</span><span class="grvsc-t7UkM5-17 grvsc-tYvMB2-8">"Hello, world!"</span><span class="grvsc-t7UkM5-1 grvsc-tYvMB2-1">);</span></span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
@@ -13,18 +13,37 @@
   }
   
   .grvsc-code {
-    display: inline-block;
+    display: inline-table;
     min-width: 100%;
   }
   
   .grvsc-line {
-    display: inline-block;
+    display: table-row;
     box-sizing: border-box;
     width: 100%;
+  }
+  
+  .grvsc-gutter-pad {
+    display: table-cell;
+    padding-left: 0.75rem;
+    padding-left: calc(var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem)) / 2);
+  }
+  
+  .grvsc-gutter {
+    display: table-cell;
+  }
+  
+  .grvsc-source {
+    display: table-cell;
     padding-left: 1.5rem;
     padding-left: var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem));
     padding-right: 1.5rem;
     padding-right: var(--grvsc-padding-right, var(--grvsc-padding-h, 1.5rem));
+  }
+  
+  .grvsc-gutter + .grvsc-source {
+    padding-left: 0.75rem;
+    padding-left: calc(var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem)) / 2);
   }
   
   .grvsc-line-highlighted {
