--- a/test/integration/baselines/code-fence-meta.html
+++ b/test/integration/baselines/code-fence-meta.html
@@ -1,4 +1,4 @@
-<pre class="grvsc-container test-wrapper default-dark" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-highlighted"><span class="grvsc-source"><span class="mtk3">// should be highlighted</span></span></span></code></pre>
+<pre class="grvsc-container test-wrapper grvsc-has-line-highlighting default-dark" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-highlighted"><span class="grvsc-source"><span class="mtk3">// should be highlighted</span></span></span></code></pre>
 <pre class="grvsc-container test-wrapper js-test default-dark" data-language="js" data-index="1"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-source"><span class="mtk3">// should not be highlighted</span></span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
@@ -11,17 +11,22 @@
     border-radius: 8px;
     border-radius: var(--grvsc-border-radius, 8px);
     font-feature-settings: normal;
+    line-height: 1.4;
   }
   
   .grvsc-code {
     display: inline-table;
-    min-width: 100%;
   }
   
   .grvsc-line {
     display: table-row;
     box-sizing: border-box;
     width: 100%;
+    position: relative;
+  }
+  
+  .grvsc-line > * {
+    position: relative;
   }
   
   .grvsc-gutter-pad {
@@ -32,6 +37,9 @@
   
   .grvsc-gutter {
     display: table-cell;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
   }
   
   .grvsc-source {
@@ -47,11 +55,24 @@
     padding-left: calc(var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem)) / 2);
   }
   
-  .grvsc-line-highlighted {
+  /* Line transformer styles */
+  
+  .grvsc-has-line-highlighting > .grvsc-code > .grvsc-line::before {
+    content: ' ';
+    position: absolute;
+    width: 100%;
+  }
+  
+  .grvsc-line-highlighted::before {
     background-color: var(--grvsc-line-highlighted-background-color, transparent);
     box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, transparent);
   }
   
+  .grvsc-line-number {
+    padding: 0 2px;
+    text-align: right;
+    opacity: 0.7;
+  }
   .default-dark {
     background-color: #1E1E1E;
     color: #D4D4D4;
