--- a/test/integration/baselines/bug-37.html
+++ b/test/integration/baselines/bug-37.html
@@ -24,7 +24,7 @@
   }
   
   .grvsc-code {
-    display: inline-table;
+    display: table;
   }
   
   .grvsc-line {
@@ -49,6 +49,10 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
+  }
+  
+  .grvsc-gutter::before {
+    content: attr(data-content);
   }
   
   .grvsc-source {
