--- a/test/integration/baselines/github-zip.html
+++ b/test/integration/baselines/github-zip.html
@@ -21,7 +21,7 @@
   }
   
   .grvsc-code {
-    display: inline-table;
+    display: table;
   }
   
   .grvsc-line {
@@ -46,6 +46,10 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
+  }
+  
+  .grvsc-gutter::before {
+    content: attr(data-content);
   }
   
   .grvsc-source {
