--- a/test/integration/baselines/highlight-directive-comments.html
+++ b/test/integration/baselines/highlight-directive-comments.html
@@ -29,7 +29,7 @@
   }
   
   .grvsc-code {
-    display: inline-table;
+    display: table;
   }
   
   .grvsc-line {
@@ -54,6 +54,10 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
+  }
+  
+  .grvsc-gutter::before {
+    content: attr(data-content);
   }
   
   .grvsc-source {
