--- a/test/integration/baselines/diff-highlighting.html
+++ b/test/integration/baselines/diff-highlighting.html
@@ -1,5 +1,5 @@
-<pre class="grvsc-container default-dark" data-language="ts" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-diff grvsc-line-diff-add"><span class="mtk1">+ </span><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">x</span><span class="mtk1"> = </span><span class="mtk7">1</span><span class="mtk1">;</span></span>
-<span class="grvsc-line grvsc-line-diff grvsc-line-diff-del"><span class="mtk1">- </span><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">y</span><span class="mtk1"> = </span><span class="mtk7">2</span><span class="mtk1">;</span></span></code></pre>
+<pre class="grvsc-container grvsc-has-line-highlighting default-dark" data-language="ts" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-diff grvsc-line-diff-add"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-add" aria-hidden="true" data-content="+"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">x</span><span class="mtk1"> = </span><span class="mtk7">1</span><span class="mtk1">;</span></span></span>
+<span class="grvsc-line grvsc-line-diff grvsc-line-diff-del"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-del" aria-hidden="true" data-content="-"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">y</span><span class="mtk1"> = </span><span class="mtk7">2</span><span class="mtk1">;</span></span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
@@ -11,43 +11,87 @@
     border-radius: 8px;
     border-radius: var(--grvsc-border-radius, 8px);
     font-feature-settings: normal;
+    line-height: 1.4;
   }
   
   .grvsc-code {
-    display: inline-block;
-    min-width: 100%;
+    display: table;
   }
   
   .grvsc-line {
-    display: inline-block;
+    display: table-row;
     box-sizing: border-box;
     width: 100%;
+    position: relative;
+  }
+  
+  .grvsc-line > * {
+    position: relative;
+  }
+  
+  .grvsc-gutter-pad {
+    display: table-cell;
+    padding-left: 0.75rem;
+    padding-left: calc(var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem)) / 2);
+  }
+  
+  .grvsc-gutter {
+    display: table-cell;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+  
+  .grvsc-gutter::before {
+    content: attr(data-content);
+  }
+  
+  .grvsc-source {
+    display: table-cell;
     padding-left: 1.5rem;
     padding-left: var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem));
     padding-right: 1.5rem;
     padding-right: var(--grvsc-padding-right, var(--grvsc-padding-h, 1.5rem));
   }
   
-  .grvsc-line-highlighted {
+  .grvsc-gutter + .grvsc-source {
+    padding-left: 0.75rem;
+    padding-left: calc(var(--grvsc-padding-left, var(--grvsc-padding-h, 1.5rem)) / 2);
+  }
+  
+  /* Line transformer styles */
+  
+  .grvsc-has-line-highlighting > .grvsc-code > .grvsc-line::before {
+    content: ' ';
+    position: absolute;
+    width: 100%;
+  }
+  
+  .grvsc-line-highlighted::before {
     background-color: var(--grvsc-line-highlighted-background-color, transparent);
-    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0
-      var(--grvsc-line-highlighted-border-color, transparent);
+    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, transparent);
   }
   
-  .grvsc-line-diff-add {
-    background-color: var(--grvsc-line-diff-add-background-color, transparent);
+  .grvsc-line-diff-add::before {
+    background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.4));
   }
   
-  .grvsc-line-diff-del {
-    background-color: var(--grvsc-line-diff-del-background-color, transparent);
+  .grvsc-line-diff-del::before {
+    background-color: var(--grvsc-line-diff-del-background-color, rgba(255, 0, 20, 0.4));
+  }
+  
+  .grvsc-line-number {
+    padding: 0 2px;
+    text-align: right;
+    opacity: 0.7;
   }
   
   .default-dark {
     background-color: #1E1E1E;
     color: #D4D4D4;
   }
-  .default-dark .mtk1 { color: #D4D4D4; }
   .default-dark .mtk4 { color: #569CD6; }
+  .default-dark .mtk1 { color: #D4D4D4; }
   .default-dark .mtk12 { color: #9CDCFE; }
   .default-dark .mtk7 { color: #B5CEA8; }
 </style>
