--- a/test/integration/baselines/diff-highlighting.html
+++ b/test/integration/baselines/diff-highlighting.html
@@ -1,5 +1,7 @@
-<pre class="grvsc-container test-wrapper grvsc-has-line-highlighting default-dark" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-highlighted"><span class="grvsc-source"><span class="mtk3">// should be highlighted</span></span></span></code></pre>
-<pre class="grvsc-container test-wrapper js-test default-dark" data-language="js" data-index="1"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-source"><span class="mtk3">// should not be highlighted</span></span></span></code></pre>
+<pre class="grvsc-container grvsc-has-line-highlighting default-dark" data-language="ts" data-index="0"><code class="grvsc-code"><span class="grvsc-line grvsc-line-diff grvsc-line-diff-add"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-add" aria-hidden="true" data-content="+"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">x</span><span class="mtk1"> = </span><span class="mtk7">1</span><span class="mtk1">;</span></span></span>
+<span class="grvsc-line grvsc-line-diff grvsc-line-diff-del"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-del" aria-hidden="true" data-content="-"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">y</span><span class="mtk1"> = </span><span class="mtk7">2</span><span class="mtk1">;</span></span></span>
+<span class="grvsc-line grvsc-line-diff grvsc-line-diff-add"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-add" aria-hidden="true" data-content="+"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">a</span><span class="mtk1"> = </span><span class="mtk8">'a'</span><span class="mtk1">;</span></span></span>
+<span class="grvsc-line grvsc-line-diff grvsc-line-diff-del"><span class="grvsc-gutter-pad"></span><span class="grvsc-gutter grvsc-diff-del" aria-hidden="true" data-content="-"></span><span class="grvsc-source"><span class="mtk4">const</span><span class="mtk1"> </span><span class="mtk12">b</span><span class="mtk1"> = </span><span class="mtk8">'b'</span><span class="mtk1">;</span></span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
@@ -90,5 +92,9 @@
     background-color: #1E1E1E;
     color: #D4D4D4;
   }
-  .default-dark .mtk3 { color: #6A9955; }
+  .default-dark .mtk4 { color: #569CD6; }
+  .default-dark .mtk1 { color: #D4D4D4; }
+  .default-dark .mtk12 { color: #9CDCFE; }
+  .default-dark .mtk7 { color: #B5CEA8; }
+  .default-dark .mtk8 { color: #CE9178; }
 </style>
