--- a/test/html/baselines/npm-extension.html
+++ b/test/html/baselines/npm-extension.html
@@ -73,11 +73,6 @@
     width: 100%;
   }
   
-  .grvsc-line-highlighted::before {
-    background-color: var(--grvsc-line-highlighted-background-color, transparent);
-    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, transparent);
-  }
-  
   .grvsc-line-diff-add::before {
     background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.4));
   }
@@ -100,4 +95,8 @@
   .synthwave-vscode .mtk3 { color: #FF7EDB; }
   .synthwave-vscode .mtk1 { color: #FFFFFF; }
   .synthwave-vscode .mtk6 { color: #36F9F6; }
+  .synthwave-vscode .grvsc-line-highlighted::before {
+    background-color: var(--grvsc-line-highlighted-background-color, rgba(255, 255, 255, 0.1));
+    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(255, 255, 255, 0.5));
+  }
 </style>
