--- a/test/html/baselines/inline-theme-function.html
+++ b/test/html/baselines/inline-theme-function.html
@@ -70,11 +70,6 @@
     width: 100%;
   }
   
-  .grvsc-line-highlighted::before {
-    background-color: var(--grvsc-line-highlighted-background-color, transparent);
-    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, transparent);
-  }
-  
   .grvsc-line-diff-add::before {
     background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.4));
   }
@@ -96,6 +91,10 @@
   .abyss .mtk15 { color: #9966B8; }
   .abyss .mtk19 { color: #2277FF; }
   .abyss .mtk7 { color: #225588; }
+  .abyss .grvsc-line-highlighted::before {
+    background-color: var(--grvsc-line-highlighted-background-color, rgba(255, 255, 255, 0.1));
+    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(255, 255, 255, 0.5));
+  }
   .default-light {
     background-color: #FFFFFF;
     color: #000000;
@@ -103,6 +102,10 @@
   .default-light .grvsc-t7UkM5-17 { color: #A31515; }
   .default-light .grvsc-t7UkM5-4 { color: #0000FF; }
   .default-light .grvsc-t7UkM5-12 { color: #001080; }
+  .default-light .grvsc-line-highlighted::before {
+    background-color: var(--grvsc-line-highlighted-background-color, rgba(0, 0, 0, 0.05));
+    box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(0, 0, 0, 0.2));
+  }
   
   /* Default Dark+ */
   @media (prefers-color-scheme: dark) {
@@ -113,5 +116,9 @@
     .grvsc-mm-tYvMB2 .grvsc-tYvMB2-8 { color: #CE9178; }
     .grvsc-mm-tYvMB2 .grvsc-tYvMB2-4 { color: #569CD6; }
     .grvsc-mm-tYvMB2 .grvsc-tYvMB2-12 { color: #9CDCFE; }
+    .grvsc-mm-tYvMB2 .grvsc-line-highlighted::before {
+      background-color: var(--grvsc-line-highlighted-background-color, rgba(255, 255, 255, 0.1));
+      box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(255, 255, 255, 0.5));
+    }
   }
 </style>
