--- a/test/html/baselines/bug-93.html
+++ b/test/html/baselines/bug-93.html
@@ -11,6 +11,7 @@
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
+    position: relative;
     -webkit-overflow-scrolling: touch;
     padding-top: 1rem;
     padding-top: var(--grvsc-padding-top, var(--grvsc-padding-v, 1rem));
@@ -76,11 +77,11 @@
   }
   
   .grvsc-line-diff-add::before {
-    background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.4));
+    background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.2));
   }
   
   .grvsc-line-diff-del::before {
-    background-color: var(--grvsc-line-diff-del-background-color, rgba(255, 0, 20, 0.4));
+    background-color: var(--grvsc-line-diff-del-background-color, rgba(255, 0, 20, 0.2));
   }
   
   .grvsc-line-number {
