--- a/test/html/baselines/luminance-detection.html
+++ b/test/html/baselines/luminance-detection.html
@@ -8,6 +8,7 @@
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
+    position: relative;
     -webkit-overflow-scrolling: touch;
     padding-top: 1rem;
     padding-top: var(--grvsc-padding-top, var(--grvsc-padding-v, 1rem));
@@ -73,11 +74,11 @@
   }
   
   .grvsc-line-diff-add::before {
-    background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.4));
+    background-color: var(--grvsc-line-diff-add-background-color, rgba(0, 255, 60, 0.2));
   }
   
   .grvsc-line-diff-del::before {
-    background-color: var(--grvsc-line-diff-del-background-color, rgba(255, 0, 20, 0.4));
+    background-color: var(--grvsc-line-diff-del-background-color, rgba(255, 0, 20, 0.2));
   }
   
   .grvsc-line-number {
